cupt (0.3.1) UNRELEASED; urgency=low

  * cupt:
    - New 'policysrc' subcommand.
  * Cupt:
    - Download:
      - Progress:
        - New method 'get_overall_estimated_time'.
      - Progresses/Console:
        - Display estimated time while downloading.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Sat, 04 Jul 2009 21:31:20 +0300

cupt (0.3.0) unstable; urgency=low

  * cupt:
    - New 'showsrc' subcommand.
    - New 'build-dep' subcommand.
    - New 'source' subcommand.
  * Cupt:
    - Cache:
      - ArchitecturedRelation:
        - Implemented.
      - SourceVersion:
        - Implemented.
      - Package:
        - 'get_versions': generate exception if there are no valid version
          entries for the package.
      - New method 'get_source_package'.
      - 'get_pin': fixed to not attempt to obtain installed version for source
        packages.
      - Parsing source lists: allow all whitespace characters between fields.
        Patch by Didier 'OdyX' Raboud <didier@raboud.com>. (Closes: #535520)
      - Parsing source lists: don't assume that /etc/apt/sources.list exists.
        Thanks to Didier 'OdyX' Raboud <didier@raboud.com>. (Closes: #535600)
      - Parsing source lists: process only files that have '.list' suffix in
        sources.list.d subdirectory.
        Thanks to Didier 'OdyX' Raboud <didier@raboud.com>.
      - New free subroutine 'verify_hash_sums'.
      - Parsing release info: set Label to '' when it's not specified. Fixes
        crash when pinning by label.
        Thanks to Didier 'OdyX' Raboud <didier@raboud.com>.
      - 'get_original_apt_pin': fixed pinning by release properties of several
        versions of the package. Thanks to Didier 'OdyX' Raboud.
    - System:
      - Resolver,Resolvers/Native,Resolvers/External:
        - New method 'unsatisfy_relation_expression'.
      - Resolvers/Native:
        - Don't consider Essential packages as candidates for auto-removal.